--- a/demo/myapp/templates/add_record.html
+++ b/demo/myapp/templates/add_record.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit" class="btn btn btn-success">Add Record</button>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+        <a href="{% url 'record_all' %}" class="btn btn-secondary">Back</a>
     </form>
 </div>
 {%endblock%}
