--- a/demo/myapp/templates/navbar.html
+++ b/demo/myapp/templates/navbar.html
@@ -8,7 +8,7 @@
       <ul class="navbar-nav mr-auto">
         {% if user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'add_record' %}">Add Record</a>
+            <a class="nav-link" href="{% url 'record_all' %}">BM1</a>
           </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
