--- a/demo/myapp/templates/record.html
+++ b/demo/myapp/templates/record.html
@@ -29,5 +29,5 @@
   <br/><br/>
   <a href="{% url 'update_record' customer_record.id %}" class="btn btn-primary">Update Record</a>
   <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
-  <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+  <a href="{% url 'record_all' %}" class="btn btn-secondary">Back</a>
 {%endblock%}
