add medical report

--- a/demo/myapp/templates/record.html
+++ b/demo/myapp/templates/record.html
@@ -17,11 +17,10 @@
   <strong>Address: </strong>{{ customer_record.addr }}</p>
   
   <p class="card-text">
-  <strong>Date: </strong>{{ customer_record.created_at }}</p>
+  <strong>Date: </strong>{{ customer_record.date }}</p>
 
   <p class="card-text">
   <strong>ID: </strong>{{ customer_record.id }}</p>
-      
       
     </div>
   </div>
