--- a/demo/myapp/templates/navbar.html
+++ b/demo/myapp/templates/navbar.html
@@ -1,29 +1,31 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'home' %}">Django Project</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        {% if user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'record_all' %}">BM1</a>
-          </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'medical_report' %}">BM2</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-        </li>
-        {%else%}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Login</a>
-        </li>
-        {% endif %}
-      </ul>
+{%if user.is_authenticated %}
+<div class="navbar">
+    <div class="navbar-left">
+      <a href="{% url 'home' %}"><img src="https://cdn-icons-png.flaticon.com/128/3209/3209134.png" alt="Canduceus"></a>
+      <a href="#">Doctors</a>
+      <a href="{% url 'record_all' %}">Patients</a>
+      <a href="{% url 'medical_report' %}">Reports</a>
+      <a href="#">Equipments</a>
+      <a href="#">Medicine</a>
+      <a href="#">Bills</a>
     </div>
-  </nav>
+    <div class="navbar-right">
+      <a href="{% url 'logout' %}" class="logout">Logout</a>
+      <div class="search">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/149/149852.png" alt=""></a>
+      </div>
+    </div>
+</div>
+
+{%else%}
+<div class="navbar">
+    <div class="navbar-right">
+      <a href="{% url 'home' %}" class="login">Login</a>
+      <a href="{% url 'register' %}" class="sign-up">Sign up</a>
+      <div class="search">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/149/149852.png" alt=""></a>
+      </div>
+    </div>
+</div>
+
+{%endif%}
