--- a/demo/myapp/templates/navbar.html
+++ b/demo/myapp/templates/navbar.html
@@ -7,7 +7,8 @@
       <a href="{% url 'medical_report' %}">Reports</a>
       <a href="#">Equipments</a>
       <a href="#">Medicine</a>
-      <a href="#">Bills</a>
+      <a href="{% url 'bills' %}">Bills</a>
+      <a href="{% url 'list_patient' %}">List patient</a>
     </div>
     <div class="navbar-right">
       <a href="{% url 'logout' %}" class="logout">Logout</a>
