--- a/demo/myapp/templates/medical_report.html
+++ b/demo/myapp/templates/medical_report.html
@@ -2,8 +2,8 @@
 {%block title%}Medical Record{%endblock%}
 {% block content %}
 <a href="{% url 'add_med_report' %}" class="btn btn-primary" role="button">Add Report</a>
-<table class="table table-striped table-hover table-bordered">
-    <thead class="table-dark">
+<table class="table table-striped table-hover table-bordered table-light">
+    <thead class="table-light">
       <tr>
         <th scope="col">ID</th>
         <th scope="col">Name</th>
