--- a/demo/myapp/templates/record.html
+++ b/demo/myapp/templates/record.html
@@ -1,32 +1,35 @@
 {% extends 'base.html' %}
-{%block title%}Patient Record{%endblock%}
+{% block title %}Patient Record{% endblock %}
 {% block content %}
 <div class="card">
-    <div class="card-header"><strong>
-          {{ customer_record.name }}</strong>
+    <div class="card-header">
+        <strong>
+            {% if med_examinations %}
+                {{ med_examinations.first.patientlist.patient.name }}
+            {% else %}
+                No Records Found
+            {% endif %}
+        </strong>
     </div>
     <div class="card-body">
-  
-  <p class="card-text">
-  <strong>Gender: </strong>{{ customer_record.gender }}</p>
-  
-  <p class="card-text">
-  <strong>Year of Birth: </strong>{{ customer_record.year }}</p>
-  
-  <p class="card-text">
-  <strong>Address: </strong>{{ customer_record.addr }}</p>
-  
-  <p class="card-text">
-  <strong>Date: </strong>{{ customer_record.date }}</p>
-
-  <p class="card-text">
-  <strong>ID: </strong>{{ customer_record.id }}</p>
-      
+        {% if med_examinations %}
+            {% for med_examination in med_examinations %}
+                <div class="examination-record">
+                    <p class="card-text"><strong>Date: </strong>{{ med_examination.patientlist.date }}</p>
+                    <p class="card-text"><strong>Symptoms: </strong>{{ med_examination.symptoms }}</p>
+                    <p class="card-text"><strong>Disease Prediction: </strong>{{ med_examination.get_disease_prediction_display }}</p>
+                    <p class="card-text"><strong>Medication: </strong>{{ med_examination.med.medication_name }}</p>
+                    <p class="card-text"><strong>Amount: </strong>{{ med_examination.num_med }}</p>
+                    <hr>
+                </div>
+            {% endfor %}
+        {% else %}
+            <p>No medical examinations found.</p>
+        {% endif %}
     </div>
-  </div>
-  
-  <br/><br/>
-  <a href="{% url 'update_record' customer_record.id %}" class="btn btn-primary">Update Record</a>
-  <a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
-  <a href="{% url 'record_all' %}" class="btn btn-secondary">Back</a>
-{%endblock%}
+</div>
+
+<br/><br/>
+<a href="{% url 'update_record' pk %}" class="btn btn-primary">Add Examination</a>
+<a href="{% url 'record_all' %}" class="btn btn-secondary">Back</a>
+{% endblock %}
