--- a/demo/myapp/templates/record_all.html
+++ b/demo/myapp/templates/record_all.html
@@ -5,9 +5,8 @@
 <a href="{% url 'add_record' %}" class="btn btn-primary" role="button">Add Record</a>
 {% regroup records by date as date_list %}
 {% for date in date_list %}
-  <h2>{{ date.grouper }}</h2>
-  <table class="table table-striped table-hover table-bordered">
-    <thead class="table-dark">
+  <table class="table table-striped table-hover table-bordered table-light">
+    <thead>
       <tr>
         <th scope="col">STT</th>
         <th scope="col">Name</th>
@@ -21,10 +20,10 @@
       {% for record in date.list %}
       <tr>
         <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
-        <td>{{ record.name }}</td>
-        <td>{{ record.gender }}</td>
-        <td>{{ record.year }}</td>
-        <td>{{ record.addr }}</td>
+        <td>{{ record.patient.name }}</td>
+        <td>{{ record.patient.gender }}</td>
+        <td>{{ record.patient.birth_year }}</td>
+        <td>{{ record.patient.address }}</td>
         <td>{{ record.date }}</td>
       </tr>
       {% endfor %}
