--- a/demo/myapp/templates/update_record.html
+++ b/demo/myapp/templates/update_record.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
+{% block title %}Add Examination{% endblock %}
 {% block content %}
-<div class="col-md-6 offset-md-3">
-    <h1>Update Record</h1>
-    <br>
-    <form method = "POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit" class="btn btn-primary">Update Record</button>
-        <a href="{% url 'record' current_record.id %}" class="btn btn-secondary">Back</a>
-    </form>
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-header">
+            <h2>Add Examination</h2>
+        </div>
+        <div class="card-body">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
+    </div>
 </div>
-{%endblock%}
+{% endblock %}
