--- a/demo/myapp/templates/navbar.html
+++ b/demo/myapp/templates/navbar.html
@@ -3,7 +3,7 @@
     <div class="navbar-left">
       <a href="{% url 'home' %}"><img src="https://cdn-icons-png.flaticon.com/128/3209/3209134.png" alt="Canduceus"></a>
       <a href="#">Doctors</a>
-      <a href="{% url 'record_all' %}">Patients</a>
+      <a href="{% url 'pre_record_all' %}">Patients</a>
       <a href="#">Equipments</a>
       <a href="{% url 'medication_usage_report' %}">Medicine Report</a>
       <a href="{% url 'medication_stock_list' %}">Medicine List</a>
